data/collection/fixes/descriptions/scala/scala-2308
```scala
~$$ scala-2.8.0 
Welcome to Scala version 2.8.0.r18583-b20090827020153 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_13).
Type in expressions to have them evaluated.
Type :help for more information.

scala> trait T[A[_]]; type T1 = T[A] forSome { type A[_] }

<console>:4: error: kinds of the type arguments (?) do not conform to the expected kinds of the type parameters (type A) in trait T.
?'s type parameters do not match type A's expected parameters: <none> has no type parameters, but type A has one
       trait T[A[_]]; type T1 = T[A] forSome { type A[_] }
                                     ^
```

works in 2.7.5